--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>swfcookies</h2>
+                <h2>Personal Hardest List</h2>
                 <p>v1.0.0</p>
             </div>
             <nav class="nav">
