--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
-        <title>Personal Hardest List</title>
+        <title>Personal Demonlist</title>
 
         <!-- Replace your server icon by uploading an image file named "list_icon.png"-->
         <link rel="icon" href="/list_icon.png" />
@@ -37,8 +37,8 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>Personal Hardest List</h2>
-                <p>v1.0.0</p>
+                <h2>Personal Demonlist</h2>
+                <p>v1.0.2</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
@@ -60,10 +60,6 @@
                             alt=""
                         />
                     </button>
-                    <!-- Replace the '#' with your discord server's invite-->
-                    <a class="nav__icon" href="#">
-                        <img src="/assets/discord.svg" alt="Discord Logo" />
-                    </a>
                 </div>
             </nav>
         </header>
