--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
-        <title>Personal Hardest Level List/title>
+        <title>Personal Demonlist/title>
 
         <!-- Replace your server icon by uploading an image file named "list_icon.png"-->
         <link rel="icon" href="/list_icon.png" />
@@ -37,8 +37,8 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>Personal List</h2>
-                <p>v1.0.2</p>
+                <h2>My List</h2>
+                <p>swfcookies</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
