--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+n<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -37,8 +37,8 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>My List</h2>
-                <p>swfcookies</p>
+                <h2>My Demonlist</h2>
+                <p>@swfcookies</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
