--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ n<!DOCTYPE html>
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
-        <title>Personal Demonlist</title>
+        <title>swfcookies' demonlist</title>
 
         <!-- Replace your server icon by uploading an image file named "list_icon.png"-->
         <link rel="icon" href="/list_icon.png" />
