--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ n<!DOCTYPE html>
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
-        <title>swfcookies' demonlist</title>
+        <title>swfcookies' Demonlist</title>
 
         <!-- Replace your server icon by uploading an image file named "list_icon.png"-->
         <link rel="icon" href="/list_icon.png" />
@@ -38,7 +38,6 @@ n<!DOCTYPE html>
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <h2>My Demonlist</h2>
-                <p>[swfcookies]</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
