--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ n<!DOCTYPE html>
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>My Demonlist</h2>
+                <h2>My Demonlist™</h2>
                 <p>swfcookies</p>
             </div>
             <nav class="nav">
