--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ n<!DOCTYPE html>
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h3>My Demonlist™</h3>
+                <h3>Personal Demonlist™</h3>
                 <p>swfcookies</p>
             </div>
             <nav class="nav">
