--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ n<!DOCTYPE html>
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <h3>My Demonlist</h3>
-                <p>swfcookies</p>
+                <p>by swfcookies</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
